fix scrollbar on chrome

--- a/frontend/src/sass/_base.scss
+++ b/frontend/src/sass/_base.scss
@@ -8,6 +8,18 @@
   scrollbar-color: $color-secondary-light $color-blue-mid;
 }
 
+//Chrome
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px!important;
+  background: $color-blue-mid;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $color-secondary-light;
+  -webkit-border-radius: 1ex;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
